chore(analysis): fix static analysis reports