@@ -1,7 +1,5 @@
 package net.anatolich.iris.subscription.app;
 
-import java.util.List;
-import java.util.stream.Collectors;
 import net.anatolich.iris.subscription.domain.ServiceProvider;
 import net.anatolich.iris.subscription.domain.Subscription;
 import net.anatolich.iris.subscription.domain.SubscriptionRepository;
@@ -9,6 +7,8 @@ import net.anatolich.iris.subscription.infra.rest.SubscriptionDto;
 import org.javamoney.moneta.Money;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.util.List;
 
 /**
  * Application service to manage subscription use-cases.
@@ -33,7 +33,7 @@ public class SubscriptionsService {
         final List<Subscription> subscriptions = repository.findAll();
         return subscriptions.stream()
             .map(SubscriptionDto::from)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
